<resources>
    <string name="app_name">ECommerceApp</string>
    <string name="the_right_address_for_shopping_anyday">The Right Address For Shopping Anyday</string>
    <string name="it_is_now_very_easy_to_reach_the_n_best_quality_among_at_the_n_products_on_the_internet">it is now very easy to reach the\n best quality among at the\n products on the internet</string>
    <string name="start">Start</string>
    <string name="nitin">Nitin</string>
    <string name="register">Register</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t Have An Account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="do_you_have_account_login">Do You Have Account? Login</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="g_see_product">See Product</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="best_deals">Best Deals</string>
    <string name="language">Language</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
</resources>