<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blury_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:drawableStart="@drawable/ic_kleine_shape"
            android:drawablePadding="6dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvRightAddressForShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:layout_marginTop="45dp"
            android:text="@string/the_right_address_for_shopping_anyday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tvQuality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping"
            app:layout_constraintStart_toStartOf="@id/tvRightAddressForShopping"
            app:layout_constraintEnd_toEndOf="@id/tvRightAddressForShopping"
            android:textAlignment="center"
            android:text="@string/it_is_now_very_easy_to_reach_the_n_best_quality_among_at_the_n_products_on_the_internet"
            style="@style/h3"
            android:layout_marginTop="15dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegisterAccountOption"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/tvQuality"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/register"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoginAccountOption"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            style="@style/whiteButtonStyle"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/btnRegisterAccountOption"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            android:text="@string/login"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>