<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/textTure"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toBottomOf="@id/guidelineLeftTextTure"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftTextTure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <ImageView
        android:id="@+id/ellipse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintTop_toTopOf="@id/guidelineEllipseTop"
        app:layout_constraintBottom_toBottomOf="@id/guidelineEllipseBottom"
        android:background="@drawable/ellips"
        app:layout_constraintDimensionRatio="1:1"/>

    <TextView
        android:id="@+id/tvRightAddressForShopping"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/h4"
        app:layout_constraintTop_toTopOf="@id/guidelineEllipseTop"
        android:layout_marginTop="@dimen/tvRightAddressMargin"
        android:text="@string/the_right_address_for_shopping_anyday"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintBottom_toBottomOf="@id/ellipse"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvQuality"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        android:textAlignment="center"
        android:text="@string/it_is_now_very_easy_to_reach_the_n_best_quality_among_at_the_n_products_on_the_internet"
        style="@style/h3"
        android:layout_marginTop="15dp"
        />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/texture_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineLeftTextTure"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22"
         />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startBtn"
        android:layout_width="@dimen/smallButtonWidth"
        android:layout_height="@dimen/smallButtonHeight"
        style="@style/blueButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/tvQuality"
        app:layout_constraintStart_toStartOf="@id/tvQuality"
        app:layout_constraintEnd_toEndOf="@id/tvQuality"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start"/>


</androidx.constraintlayout.widget.ConstraintLayout>